add product click

--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
             <img src="./asset/image/—Pngtree—sneakers vector illustration stephen curry_5773716.png" alt="Lorem ipsum dolor sit amet" class="body__img">
         </div>
     </div>
+
+    <script src="./main.js"></script>
 </body>
 </html>
