--- a/index.html
+++ b/index.html
@@ -39,7 +39,22 @@
             <img src="./asset/image/—Pngtree—sneakers vector illustration stephen curry_5773716.png" alt="Lorem ipsum dolor sit amet" class="body__img">
         </div>
     </div>
-
+    <div class="products-container">
+        <div class="products">
+            <div class="products__product">
+                <img src="./asset/image/—Pngtree—sneakers cartoon hand drawn fashion_5781370.png" class="products__img">
+                <h5 class="products__title">Lorem ipsum dolor sit amet</h5>
+            </div>
+            <div class="products__product">
+                <img src="./asset/image/—Pngtree—blue sneakers illustration_4533019.png" class="products__img">
+                <h5 class="products__title">Lorem ipsum dolor sit amet</h5>
+            </div>
+            <div class="products__product">
+                <img src="./asset/image/—Pngtree—beautiful sneakers illustration_4524427.png" class="products__img">
+                <h5 class="products__title">Lorem ipsum dolor sit amet</h5>
+            </div>
+        </div>
+    </div>
     <script src="./main.js"></script>
 </body>
 </html>
